till book 2 ch 30

--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,8 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+
+    --color-accent-pink: #F5BABB;
 }
 
 @media (prefers-color-scheme: dark) {
